--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 --find-links https://download.pytorch.org/whl/torch_stable.html
-pillow==8.2.0
+pillow>=8.3.2
 tqdm==4.61.1
 torch==1.8.1+cu111
 torchvision==0.9.1+cu111
